@@ -33,14 +33,15 @@ import java.net.URL;
 import org.opennms.features.topology.api.support.DialogWindow;
 import org.opennms.features.topology.api.support.InfoWindow;
 import org.opennms.features.topology.api.support.InfoWindow.LabelCreator;
-import org.opennms.netmgt.dao.AlarmDao;
+import org.opennms.netmgt.dao.api.AlarmDao;
 import org.opennms.netmgt.model.OnmsAlarm;
 
 import com.vaadin.data.Property;
+import com.vaadin.server.Page;
 import com.vaadin.ui.Button;
+import com.vaadin.ui.Table;
 import com.vaadin.ui.Button.ClickEvent;
 import com.vaadin.ui.Button.ClickListener;
-import com.vaadin.ui.Table;
 import com.vaadin.ui.Table.ColumnGenerator;
 import com.vaadin.ui.themes.BaseTheme;
 
@@ -61,22 +62,22 @@ public class AlarmIdColumnLinkGenerator implements ColumnGenerator {
 	@Override
 	public Object generateCell(final Table source, Object itemId, Object columnId) {
 		if (source == null) return null; // no source
-		Property alarmIdProperty = source.getContainerProperty(itemId,  alarmIdPropertyName);
-		final Object alarmId = alarmIdProperty.getValue(); 
+		Property<Integer> alarmIdProperty = source.getContainerProperty(itemId,  alarmIdPropertyName);
+		final Integer alarmId = alarmIdProperty.getValue(); 
 		if (alarmId == null) return null; // no value
 
 		// create Link
 		Button button = new Button("" + alarmId);
 		button.setStyleName(BaseTheme.BUTTON_LINK);
-		button.addListener(new ClickListener() {
+		button.addClickListener(new ClickListener() {
             private static final long serialVersionUID = 3698209256202413810L;
 
             @Override
 			public void buttonClick(ClickEvent event) {
 			    // try if alarm is there, otherwise show information dialog
-			    OnmsAlarm alarm = alarmDao.get((Integer) alarmId);
+			    OnmsAlarm alarm = alarmDao.get(alarmId);
 			    if (alarm == null) {
-		           new DialogWindow(source.getWindow(), 
+		           new DialogWindow(source.getUI(), 
 		                         "Alarm does not exist!", 
 		                         "The alarm information cannot be shown. \nThe alarm does not exist anymore. \n\nPlease refresh the Alarm Table.");
 			        return;
@@ -84,8 +85,8 @@ public class AlarmIdColumnLinkGenerator implements ColumnGenerator {
 			    
 			    // alarm still exists, show alarm details
 				try {
-					source.getWindow().addWindow(
-						new InfoWindow(new URL(source.getWindow().getURL(), "../../alarm/detail.htm?id=" + alarmId), new LabelCreator() {
+					source.getUI().addWindow(
+						new InfoWindow(new URL(Page.getCurrent().getLocation().toURL(), "../../alarm/detail.htm?id=" + alarmId), new LabelCreator() {
 								
 							@Override
 							public String getLabel() {
